crates/plotnik-tests/tests/04-emit/bytecode/binding/supertype_refinement_transitive.txt
Q = (expression#call_expression)
------------------ DIAGNOSTICS -------------------
error: matching the `expression#` supertype is not supported yet
 --> query.ptk:1:6
  |
1 | Q = (expression#call_expression)
  |      ^^^^^^^^^^
  |
help: choose the concrete subtypes of `expression` that this query should match
help: the grammar includes `assignment_expression`, `augmented_assignment_expression`, `await_expression`, `binary_expression`, `jsx_element`, … (7 more)
